School_projects/SecondYear_projects/Java_programming/Java_compiler/src/test/deca/context/valid/OwnTests_stepB/valid/tests_print/print_Var.deca
//Affichage d'une variable avec print
//

{
    int a = 10;
    float b = 11.1;
    print(a);
    print("variable a = ", a);
    print("variable b = ", b);
    print(b);
}