School_projects/SecondYear_projects/Java_programming/Java_compiler/src/test/deca/context/invalid/OwnTests_stepB/invalid/tests_print/print_incorrectVar.deca
//Affichage d'une variable avec print qui n'existe pas dans le context actuel
//erreur attendue : "a" is an invalid expression in Identifier => la variable n'existe pas

{
    print(a);
}